test_suite/tests/ui/common/attribute_with_wrong_case.stderr
error: Unknown validator `lenCharMax`. Did you mean `len_char_max`?
 --> tests/ui/common/attribute_with_wrong_case.rs:3:19
  |
3 | #[nutype(validate(lenCharMax = 255))]
  |                   ^^^^^^^^^^
